test(h8): make controller baseline check hermetic